# senko_pog

./: .gitignore  CMakeLists.txt  main.cpp  pog.c  pog.gresource.xml  pog.h  simple.glade
